FZ54A-24-game-highscore/ prevent names in high score wraping

--- a/style-game.css
+++ b/style-game.css
@@ -390,6 +390,7 @@
 .high-score--container td {
     width: 150px;
     height: 60px;
+    white-space: nowrap;
 }
 
 .table__headers {
